Add linearization (#161)
* Add linearization

* Add tests

* Tweak test formatting

* Don't use empty lists

* Prettify

* Fix linting

* Use jumpIf parameter and add todos

* Use unconditional jump